js/src/app.css
/*
 * Copyright (C) 2020 CZ.NIC z.s.p.o. (http://www.nic.cz/)
 *
 * This is free software, licensed under the GNU General Public License v3.
 * See /LICENSE for more information.
 */

@import "styles/content.css";
@import "styles/dropdown.css";
@import "styles/login.css";
@import "styles/navigation.css";
@import "styles/sidebar.css";

html,
body {
    height: 100%;
}

body {
    background-color: #f5f5f5;
    overflow-y: scroll;
}

h1 {
    font-size: 2.5rem;
}

#content-container h1:first-child {
    margin-top: 0.4rem;
    margin-bottom: 1.9rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.3rem;
}

a,
.btn-link {
    color: #00a2e2;
}

a:hover,
.btn-link:hover {
    color: #0056b3;
}

.btn-primary {
    color: #fff;
    background-color: #00a2e2;
    border-color: #00a2e2;
}

.btn-primary:active,
.btn-primary:hover,
.btn-primary:focus {
    color: #fff !important;
    background-color: #0075a3 !important;
    border-color: #0075a3 !important;
}

.btn-outline-primary {
    color: #00a2e2;
    border-color: #00a2e2;
}

.btn-outline-primary:active,
.btn-outline-primary:hover,
.btn-outline-primary:focus {
    color: #fff !important;
    background-color: #00a2e2 !important;
    border-color: #00a2e2 !important;
}

.btn-primary:focus,
.btn-outline-primary:focus {
    -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 162, 226, 0.5) !important;
    box-shadow: 0 0 0 0.2rem rgba(0, 162, 226, 0.5) !important;
}

form > button {
    margin-bottom: 0.5rem;
}

.invalid-feedback {
    display: block;
}

.form-control {
    color: black;
}

.user-select-none {
    user-select: none !important;
}

/* Fix disabled buttons */

a.disabled,
button:disabled {
    cursor: not-allowed;
    pointer-events: all !important;
}

.help {
    opacity: 0.5;
    cursor: pointer;
}

.help:hover {
    opacity: 1;
}

/* Custom Switch */

.custom-switch.switch-heading .custom-control-label:before {
    top: 10px;
}

.custom-switch.switch-heading .custom-control-label:after {
    top: 12px;
}

.custom-control-input:checked ~ .custom-control-label:before {
    border-color: #00a2e2;
    background-color: #00a2e2;
}

form div.form-group.switch {
    margin-bottom: 0;
}

/* Custom React Tooltip */

.__react_component_tooltip {
    padding: 3px 10px !important;
}

.__react_component_tooltip a:hover {
    color: #00a2e2;
}

